--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -26,7 +26,7 @@
 
 .program__description {
   color: $black;
-  margin: 0 0 17px 0;
+  margin: 0 0 39px 0;
   max-width: 226px;
 
   @media #{$not-mobile} {
@@ -40,6 +40,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  gap: 19px;
 
   @media #{$not-mobile} {
     gap: 65px;
@@ -57,7 +58,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   margin: 0;
-  padding: 22px 0 24px 0;
+  padding: 0;
 
   @media #{$desktop-only} {
     width: 100%;
@@ -70,8 +71,12 @@
   }
 }
 
+.program__group--questionnaire {
+  padding-bottom: 5px;
+}
+
 .program__group--comment {
-  padding: 0 0 23px 0;
+  padding: 0 0 4px 0;
 
   .program__title {
     margin-bottom: 38px;
@@ -113,7 +118,12 @@
 
 .program__input {
   @include input;
+  @include input-shape;
   width: 100%;
+}
+
+.program__input--error {
+  outline: solid 2px #ff8282;
 }
 
 .program__input-control {
@@ -126,6 +136,7 @@
   @include text;
   font-family: $main-font;
   text-transform: none;
+  margin: 0;
 
   @media #{$mobile-only} {
     --line: 1.14;
@@ -144,7 +155,7 @@
   --size: 24px;
   --line: 1.08;
   text-transform: none;
-  margin-bottom: 15px;
+  margin: 0;
   width: fit-content;
 
   @media #{$not-mobile} {
@@ -171,13 +182,16 @@
   }
 }
 
-.input {
-  --color: #cdcdcd;
-}
-
 .program__group--additionally {
+  padding: 23px 0 15px 0;
+
   .program__title {
-    margin: 0;
+    margin-bottom: 34px;
+  }
+
+  @media #{$mobile-only} {
+    position: relative;
+    @include gray-stripes;
   }
 
   .program__list {
@@ -215,6 +229,20 @@
       height: 14px;
       background-image: url("../img/stack.svg#mark");
     }
+
+    &:hover {
+      --color: #bababa;
+    }
+  }
+}
+
+.program__input-control:disabled {
+  opacity: 0.3;
+  cursor: default;
+
+  ~ span {
+    opacity: 0.3;
+    cursor: default;
   }
 }
 
@@ -229,9 +257,17 @@
 }
 
 .program__wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 21px;
+
+  @media #{$mobile-only} {
+    align-items: center;
+  }
+
   @media #{$not-mobile} {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     gap: 64px;
   }
 
@@ -241,6 +277,17 @@
 }
 
 .program__group--contacts {
+  @media #{$mobile-only} {
+    position: relative;
+    @include gray-stripes;
+    padding: 26px 0 4px 0;
+
+    .program__title {
+      width:187px;
+      margin-bottom: 35px;
+    }
+  }
+
   .program__list-input {
     @media #{$desktop-only} {
       display: flex;
@@ -251,21 +298,31 @@
   }
 
   .program__item-input {
+    position: relative;
+
     @media #{$desktop-only} {
       width: calc((100% - 78px) / 2);
       flex-grow: 1;
     }
 
     &::after {
-      position: relative;
+      position: absolute;
       content: "";
       width: 20px;
       height: 20px;
-      right: 38px;
+      right: 16px;
       background-repeat: no-repeat;
       background-position: center;
       align-self: center;
+
+      @media #{$not-mobile} {
+        right: 19px;
+      }
     }
+  }
+
+  .program__input {
+    padding-right: 55px;
   }
 }
 
@@ -283,6 +340,7 @@
 
 .program__textarea {
   @include input;
+  @include input-shape;
   resize: none;
   padding: 9px 12px 9px 15px;
   height: 150px;
@@ -291,8 +349,12 @@
 
 .program__group--radio {
   --color: #e7e7e7;
-  padding-bottom: 19px;
-  padding-left: 12px;
+  padding: 28px 12px 12px 0;
+
+  @media #{$mobile-only} {
+    position: relative;
+    @include gray-stripes;
+  }
 
   @media #{$not-mobile} {
     border: solid 1px var(--color);
@@ -328,6 +390,10 @@
 
     &:focus-visible {
       outline: solid 2px #000000;
+    }
+
+    &:hover {
+      --color: #bababa;
     }
   }
 }
