--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,27 +1,28 @@
 // глобальные стили
-@import "./global/global.scss";
-@import "./global/fonts.scss";
-@import "./global/variables.scss";
-@import "./global/mixins.scss";
+@import "./global/global";
+@import "./global/fonts";
+@import "./global/variables";
+@import "./global/mixins";
 
 // стили блоков
-@import "./blocks/page.scss";
-@import "./blocks/main-header.scss";
-@import "./blocks/main-navigation.scss";
-@import "./blocks/visually-hidden.scss";
-@import "./blocks/intro.scss";
-@import "./blocks/want.scss";
-@import "./blocks/idea.scss";
-@import "./blocks/slider.scss";
-@import "./blocks/map.scss";
-@import "./blocks/address.scss";
-@import "./blocks/page-footer.scss";
-@import "./blocks/copyright.scss";
-@import "./blocks/program.scss";
-@import "./blocks/main-inner.scss";
-@import "./blocks/catalog-products.scss";
-@import "./blocks/product-card.scss";
-@import "./blocks/show.scss";
-@import "./blocks/additional.scss";
-@import "./blocks/additional-card.scss";
-@import "./blocks/special-offer.scss";
+@import "./blocks/page";
+@import "./blocks/main-header";
+@import "./blocks/main-navigation";
+@import "./blocks/visually-hidden";
+@import "./blocks/intro";
+@import "./blocks/want";
+@import "./blocks/idea";
+@import "./blocks/slider";
+@import "./blocks/outlay";
+@import "./blocks/map";
+@import "./blocks/address";
+@import "./blocks/page-footer";
+@import "./blocks/copyright";
+@import "./blocks/program";
+@import "./blocks/main-inner";
+@import "./blocks/catalog-products";
+@import "./blocks/product-card";
+@import "./blocks/show";
+@import "./blocks/additional";
+@import "./blocks/additional-card";
+@import "./blocks/special-offer";
