--- a/source/sass/blocks/additional-card.scss
+++ b/source/sass/blocks/additional-card.scss
@@ -4,7 +4,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   border-top: solid 1px #cdcdcd;
-  border-bottom: solid 1px #cdcdcd;
+
+  &:last-child {
+    border-bottom: solid 1px #cdcdcd;
+  }
 
   @media #{$not-mobile} {
     gap: 25px;
