--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,7 +1,28 @@
-.copyright {
+.copyright__link {
+  @include link;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-transform: none;
+  font-family: $main-font;
+  font-size: 16px;
+  line-height: 1.2;
+
+  &:hover {
+    .copyright__link-icon {
+      color: $green;
+    }
+  }
+
+  &:focus {
+    .copyright__link-icon {
+      color: $green;
+    }
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media #{$not-mobile} {
     justify-content: flex-end;
@@ -9,10 +30,6 @@
   }
 }
 
-.copyright__link {
-  @include link;
-  text-transform: none;
-  font-family: $main-font;
-  font-size: 16px;
-  line-height: 1.2;
+.copyright__link-icon {
+  color: #444444;
 }
