--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -23,13 +23,15 @@
   }
 
   @media #{$desktop-only} {
+
     &::after {
       content: "";
       position: absolute;
-      width: 720px;
+      width: 100%;
       height: 694px;
       left: 50%;
       top: 0;
+      background-color: #414044;
       background-image: url("../img/cat-background-desktop@1.jpg");
       background-repeat: no-repeat;
       z-index: -2;
