--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -4,23 +4,23 @@
   gap: 13px;
   grid-template-columns: repeat(var(--column-count, 2), 1fr);
 
+  @media #{$mobile-only} {
+    position: relative;
+    @include gray-stripes;
+  }
+
   @media #{$not-mobile} {
     --column-count: 1;
     align-items: end;
     padding: 8px 37px 39px 39px;
     gap: 34px;
     position: relative;
+    grid-template-rows: 200px auto;
+    background: linear-gradient(#ffffff 81px, $gray 81px);
+  }
 
-    &::before {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: calc(100% - 80px);
-      top: 80px;
-      left: 0;
-      background-color: $gray;
-      z-index: -1;
-    }
+  @media #{$desktop-only} {
+    grid-template-rows: 210px auto;
   }
 }
 
