--- a/source/sass/blocks/special-offer.scss
+++ b/source/sass/blocks/special-offer.scss
@@ -3,7 +3,8 @@
   background-image: url("../img/cat-catalog-bag-mobile@1.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  width: 280px;
+  background-color: #9b9b9b;
+  width: auto;
   height: 290px;
 
   &::before {
@@ -35,7 +36,7 @@
   }
 
   @media #{$not-mobile} {
-    background-image: url("../img/cat-catalog-bag-tablet@1.jpg");
+    background-image: url("../img/cat-catalog-bag-tablet@1.jpg"), linear-gradient(to right, #1b1b1b, #fcfcfc);
     width: 100%;
     height: 200px;
 
