--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -20,6 +20,14 @@
   text-transform: uppercase;
   color: #ffffff;
   text-align: center;
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
 
 @mixin link {
@@ -92,6 +100,21 @@
     line-height: 1.5;
     padding: 10px 20px;
   }
+
+  &:placeholder {
+    opacity: 1;
+    color: #444444;
+  }
+}
+
+@mixin input-shape {
+  &:hover {
+    --color: #cdcdcd;
+  }
+
+  &:focus {
+    outline: solid 2px #444444;
+  }
 }
 
 @mixin green-stripes {
@@ -124,5 +147,17 @@
     @media #{$desktop-only} {
       left: -40px;
     }
+  }
+}
+
+@mixin gray-stripes {
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: -20px;
+    width: calc(100% + 40px);
+    height: 1px;
+    background-color: #ebebeb;
   }
 }
