--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -216,7 +216,7 @@
       border-color: rgba(94, 170, 47, 0.6);
     }
 
-    .slider__button&::before {
+    .slider__button::before {
       background-color: rgba(94, 170, 47, 0.6);
     }
   }
