--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -59,32 +59,43 @@
   @media #{$not-mobile} {
     position: relative;
     text-align: left;
-    padding: 51px 0 526px 88px;
+    padding: 46px 0 526px 88px;
   }
 
   @media #{$desktop-only} {
-    padding: 158px 0 267px 80px;
+    padding: 97px 0 267px 80px;
   }
 }
 
 .intro__description {
   text-transform: uppercase;
-  margin-bottom: 29px;
+  margin: 0 0 29px 0;
 
   @media #{$not-mobile} {
     font-size: 20px;
-    margin-bottom: 40px;
+    margin: 0 0 48px 2px;
+  }
+
+  @media #{$desktop-only} {
+    width: 45%;
+    margin: 0 0 51px 0;
   }
 }
 
 .intro__title {
   @include title;
-  margin: 0 0 25px 0;
+  margin: 0 0 26px 0;
   color: inherit;
   font-stretch: extra-condensed;
 
   @media #{$not-mobile} {
     --size: 60px;
+    margin-bottom: 42px;
+  }
+
+  @media #{$desktop-only} {
+    width: 45%;
+    margin-bottom: 41px;
   }
 }
 
@@ -104,6 +115,12 @@
 
   @media #{$not-mobile} {
     --size: 20px;
+    margin-left: 3px;
+    padding: 14px;
+  }
+
+  @media #{$desktop-only} {
+    margin-left: 0;
   }
 
   ~.intro__button {
@@ -112,17 +129,20 @@
 }
 
 .intro__image-wrapper {
+  margin-bottom: 3px;
+
   @media #{$not-mobile} {
     position: absolute;
     width: 709px;
     height: 609px;
-    top: 245px;
+    bottom: 0;
     left: 0;
     z-index: -1;
+    margin-bottom: 0;
   }
 
   @media #{$desktop-only} {
-    top: 80px;
-    left: 450px;
+    left: 448px;
+    bottom: 26px;
   }
 }
