--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -2,6 +2,22 @@
   @media #{$mobile-only} {
     border-bottom: solid 1px #d9d9d9;
   }
+
+  .main-navigation__link {
+    &[aria-current="step"] {
+      @media #{$not-mobile} {
+        text-underline-offset: 10px;
+      }
+    }
+  }
+}
+
+.main-header--form {
+  .main-navigation__list {
+    @media #{$not-mobile} {
+      column-gap: 34px;
+    }
+  }
 }
 
 .main-header__container {
@@ -11,14 +27,36 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+
+  @media #{$not-mobile} {
+    display: grid;
+    grid-template-columns: 174px 1fr;
+    column-gap: 90px;
+    align-items: start;
+  }
+
+  @media #{$desktop-only} {
+    grid-template-columns: 202px 1fr;
+    padding-top: 53px;
+  }
 }
 
 .main-header__logo {
   @include link;
   justify-self: flex-start;
+  width: 210px;
+  height: 60px;
 
   &[aria-current="page"] {
     pointer-events: none;
+  }
+
+  @media #{$not-mobile} {
+    width: 182px;
+  }
+
+  @media #{$desktop-only} {
+    width: 220px;
   }
 }
 
