--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -23,16 +23,20 @@
   justify-content: space-between;
 
   @media #{$not-mobile} {
-    gap: 296px;
-    padding: 56px 40px;
+    gap: 20px 296px;
+    padding: 54px 40px 62px;
   }
 
   @media #{$desktop-only} {
     position: absolute;
     background-color: #ffffff;
     top: 95px;
-    padding: 58px 60px 55px 80px;
-    gap: 114px;
+    padding: 55px 78px 61px 80px;
+    column-gap: 90px;
+    z-index: 1;
+    width: 565px;
+    max-height: 250px;
+    overflow: hidden;
   }
 }
 
@@ -45,19 +49,35 @@
 
   @media #{$not-mobile} {
     --size: 20px;
+    padding-top: 7px;
   }
 }
 
 .map__wrapper {
   line-height: 0;
   background-color: #f2f2f2;
+  height: 362px;
+
+  @media #{$not-mobile} {
+    height: 400px;
+  }
+
+  .ymaps-2-1-79-copyrights-pane {
+    display: none;
+  }
 }
 
 .map__image {
   @include img;
   width: 100%;
+  height: 100%;
+  display: none;
 }
 
-.map__address {
-  text-align: right;
+.map--nojs {
+  .map__wrapper {
+    .map__image {
+      display: block;
+    }
+  }
 }
