--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -15,12 +15,16 @@
   @media #{$not-mobile} {
     --column-count: 3;
   }
+
+  @media #{$desktop-only} {
+    padding: 50px 0;
+  }
 }
 
 .page-footer__social-list {
   @include reset-list;
   margin: 0;
-  padding: 20px 0;
+  padding: 20px 0 16px 0;
   min-height: 62px;
   display: flex;
   flex-wrap: wrap;
@@ -30,6 +34,10 @@
   @media #{$mobile-only} {
     border-top: solid 1px #d9d9d9;
     border-bottom: solid 1px #d9d9d9;
+  }
+
+  @media #{$not-mobile} {
+    padding-top: 23px;
   }
 }
 
@@ -49,6 +57,7 @@
 
   @media #{$not-mobile} {
     text-align: start;
+    padding-top: 7px;
   }
 }
 
