--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -94,6 +94,7 @@
   text-transform: uppercase;
   color: $dark-gray;
   border: solid 1px var(--color);
+  border-radius: 0;
 
   @media #{$not-mobile} {
     font-size: 20px;
